--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "swiper": "^8.3.2", 
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
